--- a/Article/SachaBarber.CQRS.Demo ArticleWithTOC.htm
+++ b/Article/SachaBarber.CQRS.Demo ArticleWithTOC.htm
@@ -106,7 +106,7 @@
 <ul>
 <li><a href="#Event-Handlers">Event Handlers</a>
 <ul>
-<li><a href="#ource-Of-Published-Events>Source Of Published Events</strong></a></li>
+<li><a href="#Source-Of-Published-Events">Source Of Published Events</strong></a></li>
 
 
 <li><a href="#IEventPublisher">IEventPublisher</a></li>
